@@ -7,6 +7,6 @@ Name: libbde
 Description: Library to support the BitLocker Drive Encryption (BDE) format
 Version: @VERSION@
 Libs: -L${libdir} -lbde
-Libs.private: @libbde_pc_libs_private_libbfio@ @libbde_pc_libs_private_libcrypto@ @libbde_pc_libs_private_libfdata@ @libbde_pc_libs_private_libfdatetime@ @libbde_pc_libs_private_libfguid@ @libbde_pc_libs_private_libfvalue@ @libbde_pc_libs_private_libuna@
+Libs.private: @ax_libbfio_pc_libs_private@ @ax_libcaes_pc_libs_private@ @ax_libcrypto_pc_libs_private@ @ax_libfdata_pc_libs_private@ @ax_libfdatetime_pc_libs_private@ @ax_libfguid_pc_libs_private@ @ax_libfvalue_pc_libs_private@ @ax_libhmac_pc_libs_private@ @ax_libuna_pc_libs_private@
 Cflags: -I${includedir}
 
